# module-6-IryIndriyanto

./: README.md  app.py  db.py  pyproject.toml  schemas.py
models/: __init__.py  animal.py  animal_v2.py  employee.py  employee_v2.py
resources/: animal.py  animal_v2.py  employee.py  employee_v2.py
tests/: conftest.py  test_animal_v2.py  test_employee_v2.py
