[tool.poetry]
name = "module-6-iryindriyanto"
version = "0.1.0"
description = ""
authors = ["Iry Indriyanto <iry.indriyanto20@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.2"
flask-sqlalchemy = "^3.1.1"
flask-smorest = "^0.43.0"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
